[package]
name = "aoc_2020"
version = "0.0.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
description = "Solver for Advent of Code 2020"
edition = "2018"

[dependencies]
structopt="0.3"
indicatif = "0.15"

[dependencies.aoc_helpers]
git="https://github.com/hulthe/aoc_boiler.git"

[dependencies.aoc_macro]
git="https://github.com/hulthe/aoc_boiler.git"
